                                 Muldis::D
                                  Changes
---------------------------------------------------------------------------

2010-07-xx

    * Muldis::D version 0.136.0 is released on CPAN as
    Muldis-D-0.136.0.tar.gz.

    * This release features improvements to the handling of comments and
    whitespace, and the addition of bag function syntaxes.

    * (PTMD_STD.pod)  The grammar now considers whitespace to be anything
    matched by "\s", meaning Perl's/Unicode's concept of it, rather than it
    just being composed of the 5 characters [\ \t\n\f\r].

    * (PTMD_STD.pod)  Changed how whitespace in delimited string literals
    is handled.  Previously, non-SPACE whitespace was disallowed from
    appearing literally in strings except as a "splitter" token, where it
    was delimited by a backslash pair which told the parser to ignore/strip
    said whitespace.  Now, any characters are allowed literally in strings
    and all non-SPACE whitespace is automatically ignored/stripped by the
    parser.  To actually select such whitespace as part of the string, it
    now has to be encoded as an escape sequence such as "\n".

    * (PTMD_STD.pod, Basics.pod)  Reformatted non-value-comment literals so
    that they are now delimited by both backticks and number signs, the
    former nested in the latter, rather than just number signs; for example
    " #`This is a non-value comment.`# "; the as-value-comment literals
    have not changed; for example " `This is an as-value comment.` ".  The
    first consequence of this is that the standalone number sign can now be
    more easily freed up to be used for things other than comments,
    including by itself as an operator.  The second consequence of this is
    that all comments are now delimited by backticks, rather than some just
    by backticks and others just by num signs.  Also more comments changes.

    * (PTMD_STD.pod)  Updated the grammar to explicitly include support for