@@ -384,20 +384,6 @@ an explicit type declaration still.  Note, if same inline-declared host
 param used more than once, you just need "(param foo : Bar)" form once and
 other uses can just say foo as per usual; in fact, it must be this way.
 
-* Consider in PTMD_STD using a token similar to the Perl 6 "<ws>" concept
-of something that is treated as insignificant whitespace as
-far as interpreting the code is concerned, but that may contain #-delimited
-comments.  The idea of this is to make it easier to sprinkle comments
-almost anywhere without making the grammar a lot more verbose for it.  It
-is expected that any use of such comments beside "<value>" nodes would only
-be allowed under a "<depot>", and under plain "<value>" would be rejected.
-Mind that such a token would not be used everywhere in place of a current
-PTMD_STD "<ws>" or "<ws>?" (means \s+ or \s*), but only in specific places
-repr a node that would turn into a system catalog tuple with a "comment".
-Essentially it comes in 2 flavors whose definitions are
-"<_ms_oc> ::= <ws> [<non_value_comment> <ws>]?" and
-"<_os_oc> ::= <ws>? | <ws> <non_value_comment> <ws>" or such.
-
 * Consider in all STD adding a new pragma that concerns whether data in
 delimited character string literals is ASCII or Unicode etc.
 Example PTMD_STD grammar additions:
