@@ -9,7 +9,7 @@ Muldis D general purpose data types
 
 =head1 VERSION
 
-This document is Muldis::D::Core::Types version 0.135.0.
+This document is Muldis::D::Core::Types version 0.136.0.
 
 =head1 PREFACE
 
