@@ -9,7 +9,7 @@ Muldis D generic operators for all data types
 
 =head1 VERSION
 
-This document is Muldis::D::Core::Universal version 0.135.0.
+This document is Muldis::D::Core::Universal version 0.136.0.
 
 =head1 PREFACE
 
