@@ -9,7 +9,7 @@ How to format Plain Text Muldis D
 
 =head1 VERSION
 
-This document is Muldis::D::Dialect::PTMD_STD version 0.135.0.
+This document is Muldis::D::Dialect::PTMD_STD version 0.136.0.
 
 =head1 PREFACE
 
@@ -21,7 +21,7 @@ before you read this one, which provides subservient details.
 
 This document outlines the grammar of the I<Plain Text Muldis D> standard
 dialect named C<PTMD_STD>.  The fully-qualified name of this Muldis D
-standard dialect is C<Muldis_D:"http://muldis.com":0.135.0:PTMD_STD>.
+standard dialect is C<Muldis_D:"http://muldis.com":0.136.0:PTMD_STD>.
 
 This dialect is designed to exactly match the Muldis D system catalog (the
 possible representation of Muldis D code that is visible to or updateable
@@ -244,7 +244,7 @@ it is typically the delimited character string C<http://muldis.com>.
 =item C<ln_base_version_number>
 
 This is the base version number; it is a character string formatted as per
-C<ln_base_authority>; it is typically a character string like C<0.135.0>.
+C<ln_base_authority>; it is typically a character string like C<0.136.0>.
 
 =item C<ln_dialect>
 
@@ -265,12 +265,12 @@ later, which would likely be optional.
 
 Examples:
 
-    Muldis_D:"http://muldis.com":0.135.0:PTMD_STD:{
+    Muldis_D:"http://muldis.com":0.136.0:PTMD_STD:{
         catalog_abstraction_level => rtn_inv_alt_syn,
         op_char_repertoire => extended
     }
 
-    Muldis_D:"http://muldis.com":0.135.0:PTMD_STD:{
+    Muldis_D:"http://muldis.com":0.136.0:PTMD_STD:{
         catalog_abstraction_level => rtn_inv_alt_syn,
         op_char_repertoire => extended,
         standard_syntax_extensions => {}
@@ -353,7 +353,7 @@ any system-defined scalar types not in terms of possreps.
 
 Examples:
 
-    Muldis_D:"http://muldis.com":0.135.0:PTMD_STD:{
+    Muldis_D:"http://muldis.com":0.136.0:PTMD_STD:{
         catalog_abstraction_level => the_floor,
         op_char_repertoire => basic
     }
@@ -435,7 +435,7 @@ AND SELECTORS>, L</OPAQUE VALUE LITERALS>, L</COLLECTION VALUE SELECTORS>.
 
 Examples:
 
-    Muldis_D:"http://muldis.com":0.135.0:PTMD_STD:{
+    Muldis_D:"http://muldis.com":0.136.0:PTMD_STD:{
         catalog_abstraction_level => code_as_data,
         op_char_repertoire => basic
     }
@@ -444,7 +444,7 @@ Examples:
         { food => 'Kiwis', qty => 30 }
     }
 
-    Muldis_D:"http://muldis.com":0.135.0:PTMD_STD:{
+    Muldis_D:"http://muldis.com":0.136.0:PTMD_STD:{
        catalog_abstraction_level => code_as_data,
        op_char_repertoire => basic
     }
@@ -541,7 +541,7 @@ L</GENERIC PROCEDURE STATEMENTS>.
 
 Examples:
 
-    Muldis_D:"http://muldis.com":0.135.0:PTMD_STD:{
+    Muldis_D:"http://muldis.com":0.136.0:PTMD_STD:{
         catalog_abstraction_level => plain_rtn_inv,
         op_char_repertoire => basic
     }
@@ -606,7 +606,7 @@ EXPRESSIONS>, L</IMPERATIVE INVOCATION ALTERNATE SYNTAX STATEMENTS>.
 
 Examples:
 
-    Muldis_D:"http://muldis.com":0.135.0:PTMD_STD:{
+    Muldis_D:"http://muldis.com":0.136.0:PTMD_STD:{
         catalog_abstraction_level => rtn_inv_alt_syn,
         op_char_repertoire => basic
     }
@@ -3359,8 +3359,8 @@ Examples:
         constraint nlx.lib.sc_cd_has_tracks
     }
 
-    #`relation type using tuple virtual-attr-map for case-insen key attr`#
-    #`where primary text data is case-sensitive, case-preserving`#
+    #`relation type using tuple virtual-attr-map for case-insen key attr
+      where primary text data is case-sensitive, case-preserving`#
     relation-type Locations {
         tuple-type nlx.lib.Location
         with tuple-type Location {
@@ -3379,10 +3379,10 @@ Examples:
         with key-constraint sk_loc_name_uc { loc_name_uc }
     }
 
-    #`db schema with 2 real relvars, 1 virtual relvar; all are updateable`#
-    #`real products has attrs { product_id, name }`#
-    #`real sales has attrs { product_id, qty }`#
-    #`virtual combines has attrs { product_id, name, qty }`#
+    #`db schema with 2 real relvars, 1 virtual relvar; all are updateable
+      real products has attrs { product_id, name }
+      real sales has attrs { product_id, qty }
+      virtual combines has attrs { product_id, name, qty }`#
     database-type DB {
         attr products : nlx.lib.Products
         attr sales    : nlx.lib.Sales
