@@ -9,7 +9,7 @@ Muldis D extension for spatial data types and operators
 
 =head1 VERSION
 
-This document is Muldis::D::Ext::Spatial version 0.135.0.
+This document is Muldis::D::Ext::Spatial version 0.136.0.
 
 =head1 PREFACE
 
