@@ -2,7 +2,7 @@
                                   Changes
 ---------------------------------------------------------------------------
 
-2010-07-xx
+2010-07-17
 
     * Muldis::D version 0.136.0 is released on CPAN as
     Muldis-D-0.136.0.tar.gz.
@@ -21,7 +21,9 @@
     said whitespace.  Now, any characters are allowed literally in strings
     and all non-SPACE whitespace is automatically ignored/stripped by the
     parser.  To actually select such whitespace as part of the string, it
-    now has to be encoded as an escape sequence such as "\n".
+    now has to be encoded as an escape sequence such as "\n".  And so, now
+    it is easier to write block-size strings or comments as one no longer
+    needs some kind of delim per each line, not even a backslash/splitter.
 
     * (PTMD_STD.pod, Basics.pod)  Reformatted non-value-comment literals so
     that they are now delimited by both backticks and number signs, the
